--- a/templates/addTaskForm.html
+++ b/templates/addTaskForm.html
@@ -1,10 +1,11 @@
 {{define "addTaskForm"}}
 <form>
+    <h2>Add New Task</h2>
     <div>
         <input type="text" class="form-control" name="task">
     </div>
     <div class="mt-2">
-        <button class="btn btn-primary" hx-post="/tasks" hx-target="#taskList" hx-target="innerHTML">
+        <button class="btn btn-primary" hx-post="/v1/tasks" hx-target="#taskList" hx-target="innerHTML">
             Save
         </button>
     </div>
