--- a/templates/todoList.html
+++ b/templates/todoList.html
@@ -3,8 +3,8 @@
     {{range .}}
         <li>
             <span {{if .Done}} style="text-decoration:line-through" {{end}}>{{.Task}}</span>
-            [<a href="#" hx-get="/gettaskupdateform/{{.Id}}" hx-target="#addTaskForm" hx-swap="innerHTML">Edit</a>] | 
-            <a href="#" hx-delete="/tasks/{{.Id}}" 
+            [<a href="#" hx-get="/v1/gettaskupdateform/{{.Id}}" hx-target="#addTaskForm" hx-swap="innerHTML">Edit</a>] | 
+            <a href="#" hx-delete="/v1/tasks/{{.Id}}" 
                         hx-confirm="Are you sure you want to Delete this Task?"
                         hx-target="#taskList">[Delete]</a>
         </li>
