--- a/templates/updateTaskForm.html
+++ b/templates/updateTaskForm.html
@@ -1,13 +1,15 @@
 {{define "updateTaskForm"}}
 <form>
+    <h2>Update Task</h2>
     <div>
         <input type="text" class="form-control" name="task" value="{{.Task}}">
     </div>
     <div>
+        Done:
         <input type="checkbox" name="done" {{if .Done}} checked {{end}} id="">
     </div>
     <div class="mt-2">
-        <button class="btn btn-primary" hx-put="/tasks/{{.Id}}" hx-target="#taskList" hx-target="innerHTML">
+        <button class="btn btn-primary" hx-put="/v1/tasks/{{.Id}}" hx-target="#taskList" hx-target="innerHTML">
             Update Task
         </button>
     </div>
